--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "eslint --ext .vue --ext .js src/ --fix",
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
@@ -15,29 +16,35 @@
     "core-js": "^3.6.5",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
-    "vue": "^2.6.11",
+    "tailwindcss": "^2.2.17",
+    "vue": "^3.2.16",
     "vue-apollo": "^3.0.5",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue-router": "^3.5.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.0.2",
+    "@vitejs/plugin-vue": "^1.9.3",
     "@vue/cli-plugin-babel": "4.5.14",
     "@vue/cli-plugin-eslint": "4.5.14",
     "@vue/cli-plugin-router": "4.5.14",
     "@vue/cli-plugin-vuex": "4.5.14",
     "@vue/cli-service": "4.5.14",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "autoprefixer": "^9",
+    "autoprefixer": "^10.3.7",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "less": "^4.1.2",
     "node-sass": "^4.12.0",
-    "postcss": "8.3.9",
+    "postcss": "^8.3.9",
     "prettier": "^1.19.1",
+    "sass": "^1.43.2",
     "sass-loader": "^8.0.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "stylus": "^0.55.0",
+    "vite": "^2.6.7",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
