--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "prod-serve": "vue-cli-service serve",
-    "proid-build": "rm -rf dist && vue-cli-service build"
+    "prod-build": "rm -rf dist && vue-cli-service build",
+    "start": "node server.js"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
@@ -16,6 +16,7 @@
     "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.17",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
     "tailwindcss": "^2.2.17",
