--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,8 @@
   },
   "parser": "vue-eslint-parser",
   "parserOptions": {
-    "parser": "babel-eslint",
-    "ecmaVersion": 8,
+    "parser": "@babel/eslint-parser",
+    "ecmaVersion": "latest",
     "sourceType": "module",
     "allowImportExportEverywhere": true
   },
