--- a/package.json
+++ b/package.json
@@ -3,29 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "serve": "vite preview",
+    "build": "vue-cli-service build",
     "lint": "eslint --ext .vue --ext .js src/ --fix",
     "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview",
-    "prod-build": "rm -rf dist && vue-cli-service build",
-    "start": "node server.js"
+    "start": "node server.js",
+    "vite:build": "vite build"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.17",
+    "autoprefixer": "^9",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
-    "tailwindcss": "^2.2.17",
+    "postcss": "^7",
+    "serve-static": "^1.14.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^3.2.16",
     "vue-apollo": "^3.0.5",
     "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.15.8",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "@vitejs/plugin-vue": "^1.9.3",
     "@vue/cli-plugin-babel": "4.5.14",
@@ -34,20 +39,18 @@
     "@vue/cli-plugin-vuex": "4.5.14",
     "@vue/cli-service": "4.5.14",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "autoprefixer": "^10.3.7",
-    "babel-eslint": "^10.1.0",
     "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.20.0",
     "less": "^4.1.2",
     "node-sass": "^6.0.1",
-    "postcss": "^8.3.9",
     "prettier": "^2.4.1",
     "sass": "^1.43.2",
-    "sass-loader": "^12.2.0",
+    "sass-loader": "^10",
     "stylus": "^0.55.0",
     "vite": "^2.6.7",
+    "vue-cli-plugin-tailwind": "~2.0.6",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
