--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,20 @@
 {
-  "rules": {},
+  "root": true,
   "env": {
-    "es6": true,
-    "commonjs": true,
-    "browser": true
+    "browser": true,
+    "es2021": true,
+    "node": true
   },
-  "parser": "vue-eslint-parser",
+  "extends": [
+    "plugin:vue/vue3-recommended",
+    "eslint:recommended",
+    "plugin:prettier/recommended"
+  ],
   "parserOptions": {
-    "parser": "@babel/eslint-parser",
     "ecmaVersion": "latest",
-    "sourceType": "module",
-    "allowImportExportEverywhere": true
+    "sourceType": "module"
   },
-  "extends": ["prettier","plugin:vue/essential", "plugin:prettier/recommended"],
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
-  },
-  "plugins": ["vue", "prettier"]
+  "rules": {
+    "vue/multi-word-component-names": "off"
+  }
 }
